<resources>
    <string name="app_name">Golden beach</string>
    <string name="admin_control_panel_activity_label">ADMIN CONTROL PANEL</string>
    <string name="adds_management_activity_label">ADDS MANAGEMENT</string>
    <string name="modified_activity_label">MODIFIED MANAGEMENT</string>
    <string name="movies_list">MOVIES LIST</string>
    <string name="series_list">SERIES LIST</string>
    <string name="animations_list">ANIMATIONS LIST</string>
    <string name="plays_list">PLAYS LIST</string>
    <string name="documentaries_list">DOCUMENTARIES LIST</string>
    <string name="others_list">OTHERS LIST</string>
    <string name="games_list">GAMES LIST</string>
    <string name="check_input_all_date">PLEASE CHECK INPUT ALL DATA </string>
    <string name="add_the_image">PLEASE ADD AN IMAGE TO BE SHOWN </string>
    <string name="login_activity_login_successful">LOGIN SUCCESSFUL</string>
    <string name="login_activity_wrong_user_name_or_password">ERROR IN USER NAME OR PASSWORD..</string>
    <string name="sign_up_activity_user_name_eight_car">THE USER NAME SHOULD BE MORE OR EQUAL 8 CHARACTERS</string>
    <string name="sign_up_activity_password_eight_car">THE PASSWORD SHOULD BE MORE OR EQUAL 8 CHARACTERS</string>
    <string name="sign_up_activity_password_are_not_same">THE PASSWORD ARE NOT SAME </string>
    <string name="write_your_suggestion_to_send">PLEASE WRITE YOUR SUGGESTION FIRST TO BE SENT</string>
    <string name="write_your_complainant_to_send">PLEASE WRITE YOUR COMPLAINANT FIRST TO BE SENT</string>
    <string name="name_already_exist">USER NAME ALREADY USED</string>
    <string name="email_already_exist">E-MAIL ALREADY USED</string>
    <string name="registration_successful">REGISTRATION SUCCESSFUL</string>
    <string name="already_fond">THE ITEM YOU INSERTED IS ALREADY FOND WITH THE SAME SEASON</string>
    <string name="an_error_occurred">AN ERROR OCCURRED DURING THE EDIT PLEASE TRY AGAIN LATER ..!</string>
    <string name="required_fields_is_missing">REQUIRED FIELDS IS MISSING</string>
    <string name="adding_successful">ADDING SUCCESSFUL</string>
    <string name="uploading_successful">UPLOADING SUCCESSFUL</string>
    <string name="deleted_successfully">DELETED SUCCESSFULLY</string>
    <string name="added_comment_successfully">ADDED COMMENT SUCCESSFULLY</string>
    <string name="updating_successful">UPDATING SUCCESSFUL</string>
    <string name="sending_successfully">SENDING SUCCESSFULLY</string>
    <string name="about_all_activity_added_to_watching_list_successfully">ADDED SUCCESSFULLY</string>
    <string name="about_all_activity_added_to_watching_list_already_found">MAY ALREADY EXISTS IN WATCHING LIST</string>
    <string name="watching_list_no_item_selected">NO ITEM SELECTED</string>
    <string name="watching_list_deleted_items">ITEMS DELETED SUCCESSFULLY</string>
    <string name="watching_list_deleted_item">ITEM DELETED SUCCESSFULLY</string>
    <string name="watching_list_sent_items">ITEMS HAVE BEEN SENT SUCCESSFULLY</string>
    <string name="watching_list_sent_item">ITEM HAS BEEN SENT SUCCESSFULLY</string>
    <string name="watching_list_you_are_the_admin">YOU ARE THE ADMIN</string>
    <string name="input_comment">YOU CAN NOT COMMENT AN EMPTY</string>
    <string name="input_the_key_word">PLEASE INPUT ANY KYE WORD</string>
    <string name="input_the_year">PLEASE INPUT ANY YEAR</string>
    <string name="you_have_to_input_evaluation_value">YOU HAVE TO INPUT VALUE </string>
    <string name="input_evaluation_insert_successful_message">RATED SUCCESSFUL</string>
    <string name="input_evaluation_update_successful_message">RATED CHANGED SUCCESSFULLY</string>
    <string name="this_feature_is_not_available_now">THIS FEATURE IS NOT AVAILABLE NOW ..!</string>
    <string name="no_more_comments">NO MORE COMMENTS</string>
    <string name="no_more_suggestions">NO MORE SUGGESTIONS</string>
    <string name="no_more_complainants">NO MORE COMPLAINANTS</string>
    <string name="no_more_items">NO MORE ITEMS</string>
    <string name="not_found_any_user">THERE ARE NO USERS</string>
    <string name="splash_activity_name_of_shop_text_view">GOLDEN BEACH</string>
    <string name="splash_activity_copy_right_text_view">ALL COPY RIGHT \u00a9 RESERVED TO GOLDEN BEACH STORES</string>
    <string name="control_panel_activity_posts_managements_text_view">POSTS MANAGEMENT</string>
    <string name="control_panel_activity_adds_managements_text_view">ADDS MANAGEMENT</string>
    <string name="control_panel_activity_modified_managements_text_view">MODIFIED MANAGEMENT</string>
    <string name="add_new_post_activity_header_text_view">NEW POST</string>
    <string name="add_new_post_activity_section_text_view">SECTION</string>
    <string name="add_new_post_activity_brand_of_section_text_view">BRAND OF SECTION</string>
    <string name="add_new_post_activity_category_view">CATEGORY</string>
    <string name="add_new_post_activity_name_text_view">NAME</string>
    <string name="add_new_post_activity_story_text_view">STORY</string>
    <string name="add_new_post_activity_trailer_text_view">TRAILER</string>
    <string name="add_new_post_activity_year_text_view">YEAR</string>
    <string name="add_new_post_activity_session_text_view">SEASON</string>
    <string name="add_new_post_activity_upload_button">UPLOAD</string>
    <string name="add_new_post_activity_add_new_post_progress_dialog_title">UPLOADING THE POST ...</string>
    <string name="add_new_post_activity_add_new_post_progress_dialog_message">PLEASE WAIT ...</string>
    <string name="edit_post_activity_header_text_view">UPDATE POST</string>
    <string name="edit_post_activity_upload_button">UPDATE</string>
    <string name="edit_adds_activity_header_text_view">UPDATE ADD</string>
    <string name="adds_management_activity_new_add_title">NEW ADD</string>
    <string name="adds_management_activity_all_adds_title">ALL ADDS</string>
    <string name="there_are_no_adds">THERE ARE NO ADDS</string>
    <string name="all_adds_fragment_no_adds_text_view">YOU HAVE NOT ADDED ADDS YET</string>
    <string name="new_add_fragment_new_add_progress_dialog_title">UPLOADING THE ADD ...</string>
    <string name="new_add_fragment_new_add_progress_dialog_message">PLEASE WAIT ...</string>
    <string name="all_adds_fragment_get_all_adds_progress_dialog_title">GETTING ADDS ...</string>
    <string name="all_adds_fragment_get_all_adds_progress_dialog_message">PLEASE WAIT ...</string>
    <string name="all_adds_fragment_delete_add_progress_dialog_title">DELETING ...</string>
    <string name="all_adds_fragment_delete_add_progress_dialog_message">DELETING THE ADD ...</string>
    <string name="all_adds_fragment_management_the_add_alert_dialog_title">EDIT/DELETE THE ADD</string>
    <string name="all_adds_fragment_management_the_add_alert_dialog_message">PLEASE CHOSE A TASK</string>
    <string name="all_adds_fragment_management_the_add_alert_dialog_positive_button">EDIT</string>
    <string name="all_adds_fragment_management_the_add_alert_dialog_negative_button">DELETE</string>
    <string name="all_adds_fragment_sure_delete_the_add_alert_dialog_message">YOU WANT TO REMOVE THE ADD</string>
    <string name="all_adds_fragment_sure_delete_the_add_alert_dialog_positive_button">REMOVE</string>
    <string name="all_adds_fragment_sure_delete_the_add_alert_dialog_negative_button">CANCEL</string>
    <string name="edit_adds_activity_owner_name_text_view">THE NAME OF OWNER</string>
    <string name="edit_adds_activity_description_text_view">DESCRIPTION</string>
    <string name="edit_adds_activity_update_text_view">UPDATE</string>
    <string name="login_activity_progress_dialog_title">LOGGING IN ...</string>
    <string name="login_activity_progress_dialog_message">PLEASE WAIT UNTIL CHECKING</string>
    <string name="login_activity_user_name_hint">USER NAME</string>
    <string name="login_activity_password_hint">PASSWORD</string>
    <string name="login_activity_forget_password_text_view">DID YOU FORGET YOUR PASSWORD...?</string>
    <string name="login_activity_login_button">LOGIN</string>
    <string name="login_activity_message_text_view">DON\'\T YOU HAVE AN ACCOUNT...?</string>
    <string name="login_activity_create_text_view">CREATE</string>
    <string name="login_activity_notification_message">WELCOME MR. </string>
    <string name="sign_up_activity_progress_dialog_title">SIGNING UP</string>
    <string name="sign_up_activity_progress_dialog_message">PLEASE WAIT UNTIL CHECKING</string>
    <string name="signup_activity_full_name_hint">FULL NAME</string>
    <string name="signup_activity_user_name_hint">USER NAME</string>
    <string name="signup_activity_email_hint">E-MAIL</string>
    <string name="signup_activity_password_hint">PASSWORD</string>
    <string name="signup_activity_confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="signup_activity_signup_button">SIGN UP</string>
    <string name="signup_activity_message_text_view">DO YOU HAVE AN ACCOUNT...?</string>
    <string name="signup_activity_login_text_view">LOGIN</string>
    <string name="login_alert_dialog_title">LOGIN IN</string>
    <string name="login_alert_dialog_message">YOU HAVE TO LOGIN FIRST ... </string>
    <string name="login_alert_dialog_ok_button">LOGIN</string>
    <string name="login_alert_dialog_cancel_button">CANCEL</string>
    <string name="sign_up_condations_title_text_view">SIGN UP CONDITIONS</string>
    <string name="sign_up_condations_first_message">THE USER FULL NAME SHOULD BE CLEAR TO COMMUNICATE WITH ADMIN . </string>
    <string name="sign_up_condations_second_message"> YOU SHOULD INSERT RIGHT E-MAIL TO GET BACK YOUR PASSWORD IF YOU MISSED IT . </string>
    <string name="sign_up_condations_third_message">THE CONTENT IS PROPRATE FOR THAT HOW IS MORE THAN 10 YEARS OLD .</string>
    <string name="sign_up_condations_fourth_message">THE PASSWORD MUST BE MORE THAN 8 CHARACTERS .</string>
    <string name="sign_up_condations_button">CONTINUE</string>
    <string name="post_session">SEASON : </string>
    <string name="post_year">YEAR : </string>
    <string name="post_section">SECTION : </string>
    <string name="post_category">CATEGORY : </string>
    <string name="post_see_more_details">SEE MORE DETAILS</string>
    <string name="home_fragment_posts_dialog_title">FETCHING</string>
    <string name="home_fragment_posts_dialog_message">PLEASE WAIT UNTIL FETCHING THE POSTS</string>
    <string name="home_fragment_we_have_maintenance_section">WE HAVE MAINTENANCE SECTION</string>
    <string name="sections_fragment__expandable_list_view_movies_title">MOVIES</string>
    <string name="sections_fragment__expandable_list_view_movies_body_foreign">FOREIGN</string>
    <string name="chang_language_dialog_header">CHOSE APP LANGUAGE</string>
    <string name="language_arabic">ARABIC</string>
    <string name="language_english">ENGLISH</string>
    <string name="menu_title_communication">COMMUNICATION</string>
    <string name="menu_title_tools">TOOLS</string>
    <string name="menu_title_others">OTHERS</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">CATEGORIES</string>
    <string name="menu_watching_list">WATCHING LIST</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_maintenance">MAINTENANCE</string>
    <string name="menu_accessories">ACCESSORIES</string>
    <string name="menu_offers">OFFERS</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_suggestions">FEED BACK</string>
    <string name="menu_about_app">ABOUT APP</string>
    <string name="menu_contact_us">CONTACT US</string>
    <string name="menu_about_developer">ABOUT DEVELOPER</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">SHARE</string>
    <string name="menu_send">CHATTING</string>
</resources>